[ACT-24] fixed alignment on the login page for IE browser (#908)

--- a/lms/static/sass/blocks/_login-register.scss
+++ b/lms/static/sass/blocks/_login-register.scss
@@ -1,5 +1,9 @@
 .login-register-content {
 	background: none;
+
+	@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+		display: block;
+	}
 }
 
 .login-register {
